Compare past reports to 2022 C7

--- a/cycle-7-analysis.ipynb
+++ b/cycle-7-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "744cd275-442a-4fdc-a7dc-c4d8a6b71ffb",
+   "id": "cf85562a-52e0-466d-9f9d-6cf1a68696de",
    "metadata": {},
    "source": [
     "# Analyze Cycle 7 reports for County Executive candidates currently in office"
@@ -11,12 +11,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa52b158-8983-43da-9503-91a6822a2f2d",
+   "id": "710f5c01-6b48-4356-bc63-a5f1ce235b55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import reduce\n",
-    "import glob\n",
     "import pandas as pd\n",
     "from PyPDF2 import PdfReader\n",
     "import re"
@@ -25,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d985cfb7-c409-4f4d-9ac0-ad76d0a8ea9a",
+   "id": "ed28309b-d5f0-4d58-8668-21e7250a570a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +35,7 @@
     "    return [item for sublist in l for item in sublist]\n",
     "\n",
     "def get_contributions(filename):\n",
-    "    contributions = []\n",
-    "    contributions.append(flatten(process_report(filename)))\n",
+    "    contributions = process_report(filename)\n",
     "\n",
     "    df = pd.DataFrame(\n",
     "        flatten(contributions),\n",
@@ -376,11 +373,475 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "edaacfaa-beb1-49d2-9cb5-1c41f927bf65",
+   "id": "aedaa194-1873-4f2e-833f-18ca741b75bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_wein_x</th>\n",
+       "      <th>pct_wein_x</th>\n",
+       "      <th>name</th>\n",
+       "      <th>amount_wein_y</th>\n",
+       "      <th>pct_wein_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WESTERN PENNSYLVANIA LABORERS 2019 PAC</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>0.180471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ATU COPE VOLUNTARY ACCOUNT</td>\n",
+       "      <td>37614.0</td>\n",
+       "      <td>0.075425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FNB CORPORATION PAC</td>\n",
+       "      <td>22500.0</td>\n",
+       "      <td>0.045118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MID-ATLANTIC LABORERS' POLITICAL LEAGUE</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>0.044115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FRIENDS OF RANDY MARTINI</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.040105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOCAL 0449 STEAMFITTERS UNION PAC</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>0.030078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOCAL 0005 IBEW PAC</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.020052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AMALGAMATED TRANSIT UNION - LOCAL 85</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.020052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>JAMES P. GRANT</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.020052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CHARLES HAMMEL III</td>\n",
+       "      <td>7500.0</td>\n",
+       "      <td>0.015039</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     amount_wein_x  pct_wein_x                                     name  \\\n",
+       "321            NaN         NaN   WESTERN PENNSYLVANIA LABORERS 2019 PAC   \n",
+       "22             NaN         NaN               ATU COPE VOLUNTARY ACCOUNT   \n",
+       "103            NaN         NaN                      FNB CORPORATION PAC   \n",
+       "241            NaN         NaN  MID-ATLANTIC LABORERS' POLITICAL LEAGUE   \n",
+       "113            NaN         NaN                 FRIENDS OF RANDY MARTINI   \n",
+       "203            NaN         NaN        LOCAL 0449 STEAMFITTERS UNION PAC   \n",
+       "198            NaN         NaN                      LOCAL 0005 IBEW PAC   \n",
+       "10             NaN         NaN     AMALGAMATED TRANSIT UNION - LOCAL 85   \n",
+       "146            NaN         NaN                           JAMES P. GRANT   \n",
+       "41             NaN         NaN                       CHARLES HAMMEL III   \n",
+       "\n",
+       "     amount_wein_y  pct_wein_y  \n",
+       "321        90000.0    0.180471  \n",
+       "22         37614.0    0.075425  \n",
+       "103        22500.0    0.045118  \n",
+       "241        22000.0    0.044115  \n",
+       "113        20000.0    0.040105  \n",
+       "203        15000.0    0.030078  \n",
+       "198        10000.0    0.020052  \n",
+       "10         10000.0    0.020052  \n",
+       "146        10000.0    0.020052  \n",
+       "41          7500.0    0.015039  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# "
+    "pd.merge(\n",
+    "    df_weinstein_topcontribs,\n",
+    "    pastleaders[['name', 'amount_wein', 'pct_wein']],\n",
+    "    on='name', how='outer',\n",
+    ").sort_values(by='pct_wein_y', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b96b0f31-0ebd-4b58-8824-9df5ad00aa7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_lamb_x</th>\n",
+       "      <th>pct_lamb_x</th>\n",
+       "      <th>name</th>\n",
+       "      <th>amount_lamb_y</th>\n",
+       "      <th>pct_lamb_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOCAL 0005 IBEW PAC</td>\n",
+       "      <td>56250.0</td>\n",
+       "      <td>0.142927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOCAL 0027 PLUMBERS UNION PAC</td>\n",
+       "      <td>48550.0</td>\n",
+       "      <td>0.123362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOCAL 0449 STEAMFITTERS UNION PAC</td>\n",
+       "      <td>40350.0</td>\n",
+       "      <td>0.102526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1004</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOCAL 0066 PAC CLUB</td>\n",
+       "      <td>37000.0</td>\n",
+       "      <td>0.094014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>994</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOCAL 0690 PLUMBERS UNION POL ACTION FUND</td>\n",
+       "      <td>27500.0</td>\n",
+       "      <td>0.069875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOCAL 0542 IUOE OPER ENG (NORRISTN)</td>\n",
+       "      <td>25000.0</td>\n",
+       "      <td>0.063523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>552</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GREATER PA CARPENTERS PAC</td>\n",
+       "      <td>18050.0</td>\n",
+       "      <td>0.045864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1002</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>INTL UNION PAINTERS ALLIED TRADE</td>\n",
+       "      <td>14000.0</td>\n",
+       "      <td>0.035573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WESTERN PENNSYLVANIA LABORERS 2019 PAC</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.025409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1010</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>INTL BROTHERHOOD BOILERMAKERS 154</td>\n",
+       "      <td>7100.0</td>\n",
+       "      <td>0.018041</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      amount_lamb_x  pct_lamb_x                                       name  \\\n",
+       "198             NaN         NaN                        LOCAL 0005 IBEW PAC   \n",
+       "200             NaN         NaN              LOCAL 0027 PLUMBERS UNION PAC   \n",
+       "203             NaN         NaN          LOCAL 0449 STEAMFITTERS UNION PAC   \n",
+       "1004            NaN         NaN                        LOCAL 0066 PAC CLUB   \n",
+       "994             NaN         NaN  LOCAL 0690 PLUMBERS UNION POL ACTION FUND   \n",
+       "999             NaN         NaN        LOCAL 0542 IUOE OPER ENG (NORRISTN)   \n",
+       "552             NaN         NaN                  GREATER PA CARPENTERS PAC   \n",
+       "1002            NaN         NaN           INTL UNION PAINTERS ALLIED TRADE   \n",
+       "321             NaN         NaN     WESTERN PENNSYLVANIA LABORERS 2019 PAC   \n",
+       "1010            NaN         NaN          INTL BROTHERHOOD BOILERMAKERS 154   \n",
+       "\n",
+       "      amount_lamb_y  pct_lamb_y  \n",
+       "198         56250.0    0.142927  \n",
+       "200         48550.0    0.123362  \n",
+       "203         40350.0    0.102526  \n",
+       "1004        37000.0    0.094014  \n",
+       "994         27500.0    0.069875  \n",
+       "999         25000.0    0.063523  \n",
+       "552         18050.0    0.045864  \n",
+       "1002        14000.0    0.035573  \n",
+       "321         10000.0    0.025409  \n",
+       "1010         7100.0    0.018041  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(\n",
+    "    df_lamb_topcontribs,\n",
+    "    pastleaders[['name', 'amount_lamb', 'pct_lamb']],\n",
+    "    on='name', how='outer',\n",
+    ").sort_values(by='pct_lamb_y', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0e7c2996-9459-4555-8085-96dcfb5e2b05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_inna_x</th>\n",
+       "      <th>pct_inna_x</th>\n",
+       "      <th>name</th>\n",
+       "      <th>amount_inna_y</th>\n",
+       "      <th>pct_inna_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UNITEMIZED</td>\n",
+       "      <td>35293.34</td>\n",
+       "      <td>0.109579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>530</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EVAN J. SEGAL</td>\n",
+       "      <td>16020.63</td>\n",
+       "      <td>0.049741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>912</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SEIU HEALTHCARE PA COPE</td>\n",
+       "      <td>11250.00</td>\n",
+       "      <td>0.034929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>841</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PENNSYLVANIA SIERRA CLUB PAC</td>\n",
+       "      <td>10000.00</td>\n",
+       "      <td>0.031048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DAVID TURNER</td>\n",
+       "      <td>7650.00</td>\n",
+       "      <td>0.023752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>840</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PENNSYLVANIA DEMOCRATIC PARTY</td>\n",
+       "      <td>7613.90</td>\n",
+       "      <td>0.023640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>970</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WOMEN FOR THE FUTURE</td>\n",
+       "      <td>6500.00</td>\n",
+       "      <td>0.020181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NANCY BERNSTEIN</td>\n",
+       "      <td>6500.00</td>\n",
+       "      <td>0.020181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ALLEGHENY COUNTY DEMOCRATIC DELEGATION</td>\n",
+       "      <td>5750.00</td>\n",
+       "      <td>0.017853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>872</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>REPRESENT PAC</td>\n",
+       "      <td>5500.00</td>\n",
+       "      <td>0.017076</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     amount_inna_x  pct_inna_x                                    name  \\\n",
+       "315            NaN         NaN                              UNITEMIZED   \n",
+       "530            NaN         NaN                           EVAN J. SEGAL   \n",
+       "912            NaN         NaN                 SEIU HEALTHCARE PA COPE   \n",
+       "841            NaN         NaN            PENNSYLVANIA SIERRA CLUB PAC   \n",
+       "478            NaN         NaN                            DAVID TURNER   \n",
+       "840            NaN         NaN           PENNSYLVANIA DEMOCRATIC PARTY   \n",
+       "970            NaN         NaN                    WOMEN FOR THE FUTURE   \n",
+       "796            NaN         NaN                         NANCY BERNSTEIN   \n",
+       "342            NaN         NaN  ALLEGHENY COUNTY DEMOCRATIC DELEGATION   \n",
+       "872            NaN         NaN                           REPRESENT PAC   \n",
+       "\n",
+       "     amount_inna_y  pct_inna_y  \n",
+       "315       35293.34    0.109579  \n",
+       "530       16020.63    0.049741  \n",
+       "912       11250.00    0.034929  \n",
+       "841       10000.00    0.031048  \n",
+       "478        7650.00    0.023752  \n",
+       "840        7613.90    0.023640  \n",
+       "970        6500.00    0.020181  \n",
+       "796        6500.00    0.020181  \n",
+       "342        5750.00    0.017853  \n",
+       "872        5500.00    0.017076  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(\n",
+    "    df_innamorato_topcontribs,\n",
+    "    pastleaders[['name', 'amount_inna', 'pct_inna']],\n",
+    "    on='name', how='outer',\n",
+    ").sort_values(by='pct_inna_y', ascending=False).head(10)"
    ]
   }
  ],
