Extract PDF parsing from notebooks

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -15,68 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from campfin import get_contributions\n",
     "from functools import reduce\n",
-    "import glob\n",
-    "import pandas as pd\n",
-    "from PyPDF2 import PdfReader\n",
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "bffb46db-dfd7-4766-aa65-690f4aa5f07d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CONTRIB_REGEX = r'Full Name of Contrib.*\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(\\d+)\\n(\\d+)\\n(\\d+)\\n'\n",
-    "RECEIPT_REGEX = r'Full Name \\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(\\d+)\\n(\\d+)\\n(\\d+)\\nReceipt Description\\n.*\\n'\n",
-    "UNITEMIZED_REGEX = r'Unitemized  Contributions Received - \\$ 50.00 or Less Per Contributor\\nTOTAL for the Reporting Period           \\(1\\)\\n\\$\\n(.*)\\n'\n",
-    "\n",
-    "def flatten(l):\n",
-    "    return [item for sublist in l for item in sublist]\n",
-    "\n",
-    "def get_contributions(name):\n",
-    "    contributions = []\n",
-    "    for file in glob.glob('input/%s_*.pdf' % name.capitalize()):\n",
-    "        contributions.append(flatten(process_report(file)))\n",
-    "\n",
-    "    df = pd.DataFrame(\n",
-    "        flatten(contributions),\n",
-    "        columns=['name', 'address1', 'city', 'state', 'zipcode', 'amount', 'month', 'day', 'year'])\n",
-    "    df['name'] = df.name.str.upper()\n",
-    "    df['amount'] = pd.to_numeric(df.amount.str.replace(',', ''))\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "def process_report(filename):\n",
-    "    reader = PdfReader(filename)\n",
-    "    text = \"\"\n",
-    "\n",
-    "    for page in reader.pages:\n",
-    "        text += page.extract_text() + \"\\n\"\n",
-    "\n",
-    "    unitemized = re.findall(UNITEMIZED_REGEX, text)\n",
-    "    if len(unitemized) == 0:\n",
-    "        unitemized = []\n",
-    "    else:\n",
-    "        unitemized = [(\n",
-    "            'UNITEMIZED',\n",
-    "            '',\n",
-    "            'PITTSBURGH',\n",
-    "            'PA',\n",
-    "            '',\n",
-    "            unitemized[0],\n",
-    "            '',\n",
-    "            '',\n",
-    "            ''\n",
-    "        )]\n",
-    "\n",
-    "    return [\n",
-    "        re.findall(CONTRIB_REGEX, text),\n",
-    "        re.findall(RECEIPT_REGEX, text),\n",
-    "        unitemized\n",
-    "    ]"
+    "import pandas as pd"
    ]
   },
   {
@@ -89,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "468a29e8-9953-44b6-b577-c9d06ee7fa03",
    "metadata": {},
    "outputs": [],
@@ -121,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "951ccabf-318a-4bd6-a59a-0451ebd6431b",
    "metadata": {},
    "outputs": [
@@ -230,7 +171,7 @@
        "41                        CHARLES HAMMEL III       7500.0  0.015039"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7da9f58c-0b3a-4e19-aa40-0cf32867f147",
    "metadata": {},
    "outputs": [],
@@ -277,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8e2bd0ab-961c-4db8-a466-5cab86fb5050",
    "metadata": {},
    "outputs": [
@@ -386,7 +327,7 @@
        "550                           REPRESENT PAC      5500.00  0.017076"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "93e6b7ed-fe94-4cef-b19c-995ce3ab9979",
    "metadata": {},
    "outputs": [],
@@ -449,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "10d2b694-967e-4f0a-aba8-452877d4c235",
    "metadata": {},
    "outputs": [],
@@ -474,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4a8d2591-aaaf-4efa-8617-cceffc5ff1c1",
    "metadata": {},
    "outputs": [
@@ -594,7 +535,7 @@
        "52   9300158          INTL BROTHERHOOD BOILERMAKERS 154       7100.0  0.018041"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d5a9fcaa-f90d-4899-98e4-82768c553906",
    "metadata": {},
    "outputs": [],
@@ -650,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "696cfb68-ad07-4603-a3a4-448b99fd315c",
    "metadata": {},
    "outputs": [
@@ -749,7 +690,7 @@
        "AFSCME COUNCIL 13 POL & LEG ACCT        0.000508  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "34e834ac-f1c0-4943-b619-ab4ffbf1c83a",
    "metadata": {},
    "outputs": [
@@ -900,7 +841,7 @@
        "SEIU HEALTHCARE PA COPE                 0.000127  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ed628fc7-7565-4c8c-9db1-0ba12580ebe3",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1043,7 @@
        "TEAMSTERS LOCAL 205 PAC                             0.000508  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d4b67b3c-f5c0-43df-a741-bb770a32db90",
    "metadata": {},
    "outputs": [],
@@ -1141,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "c225734f-a72b-4e47-994d-f8473293e275",
    "metadata": {},
    "outputs": [],
