--- a/cycle-7-analysis.ipynb
+++ b/cycle-7-analysis.ipynb
@@ -15,64 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from PyPDF2 import PdfReader\n",
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ed28309b-d5f0-4d58-8668-21e7250a570a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CONTRIB_REGEX = r'Full Name of Contrib.*\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(\\d+)\\n(\\d+)\\n(\\d+)\\n'\n",
-    "RECEIPT_REGEX = r'Full Name \\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(\\d+)\\n(\\d+)\\n(\\d+)\\nReceipt Description\\n.*\\n'\n",
-    "UNITEMIZED_REGEX = r'Unitemized  Contributions Received - \\$ 50.00 or Less Per Contributor\\nTOTAL for the Reporting Period           \\(1\\)\\n\\$\\n(.*)\\n'\n",
-    "\n",
-    "def flatten(l):\n",
-    "    return [item for sublist in l for item in sublist]\n",
-    "\n",
-    "def get_contributions(filename):\n",
-    "    contributions = process_report(filename)\n",
-    "\n",
-    "    df = pd.DataFrame(\n",
-    "        flatten(contributions),\n",
-    "        columns=['name', 'address1', 'city', 'state', 'zipcode', 'amount', 'month', 'day', 'year'])\n",
-    "    df['name'] = df.name.str.upper()\n",
-    "    df['amount'] = pd.to_numeric(df.amount.str.replace(',', ''))\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "def process_report(filename):\n",
-    "    reader = PdfReader(filename)\n",
-    "    text = \"\"\n",
-    "\n",
-    "    for page in reader.pages:\n",
-    "        text += page.extract_text() + \"\\n\"\n",
-    "\n",
-    "    unitemized = re.findall(UNITEMIZED_REGEX, text)\n",
-    "    if len(unitemized) == 0:\n",
-    "        unitemized = []\n",
-    "    else:\n",
-    "        unitemized = [(\n",
-    "            'UNITEMIZED',\n",
-    "            '',\n",
-    "            'PITTSBURGH',\n",
-    "            'PA',\n",
-    "            '',\n",
-    "            unitemized[0],\n",
-    "            '',\n",
-    "            '',\n",
-    "            ''\n",
-    "        )]\n",
-    "\n",
-    "    return [\n",
-    "        re.findall(CONTRIB_REGEX, text),\n",
-    "        re.findall(RECEIPT_REGEX, text),\n",
-    "        unitemized\n",
-    "    ]"
+    "from campfin import get_contributions_from_report\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -85,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "76cf9c64-8ad7-42ce-b4f4-d800d66a113b",
    "metadata": {},
    "outputs": [],
@@ -111,12 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "706f739a-3af9-4040-9696-da3f914c4b14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_weinstein = get_contributions('input/blank.pdf')\n",
+    "df_weinstein = get_contributions_from_report('input/blank.pdf')\n",
     "df_weinstein = df_weinstein.rename(columns={'amount': 'amount_wein'})\n",
     "\n",
     "df_weinstein['name'] = df_weinstein.name.replace({\n",
@@ -143,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d2eecbbe-14b0-4ed4-90fd-82343c80d9d7",
    "metadata": {},
    "outputs": [
@@ -184,7 +128,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0b2c7a63-ff38-42c5-9e09-0ea8318bf7ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_innamorato = get_contributions('input/blank.pdf')\n",
+    "df_innamorato = get_contributions_from_report('input/blank.pdf')\n",
     "df_innamorato = df_innamorato.rename(columns={'amount': 'amount_inna'})\n",
     "\n",
     "df_innamorato['name'] = df_innamorato.name.replace({\n",
@@ -231,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c801c2e9-cbfc-4d65-ae45-4dfcba870d64",
    "metadata": {},
    "outputs": [
@@ -272,7 +216,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1b70d1ea-1567-4a42-83cb-82c591285fa4",
    "metadata": {},
    "outputs": [],
@@ -307,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bcf5961b-a90c-4adc-a0c0-51a144259c5d",
    "metadata": {},
    "outputs": [
@@ -348,7 +292,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "aedaa194-1873-4f2e-833f-18ca741b75bf",
    "metadata": {},
    "outputs": [
@@ -515,7 +459,7 @@
        "41          7500.0    0.015039  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b96b0f31-0ebd-4b58-8824-9df5ad00aa7c",
    "metadata": {},
    "outputs": [
@@ -673,7 +617,7 @@
        "1010         7100.0    0.018041  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0e7c2996-9459-4555-8085-96dcfb5e2b05",
    "metadata": {},
    "outputs": [
@@ -831,7 +775,7 @@
        "872        5500.00    0.017076  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
