--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from campfin import get_contributions\n",
+    "from campfin import get_top_contributors\n",
     "from functools import reduce\n",
     "import pandas as pd"
    ]
@@ -31,38 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "468a29e8-9953-44b6-b577-c9d06ee7fa03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_weinstein = get_contributions('Weinstein')\n",
-    "df_weinstein = df_weinstein.rename(columns={'amount': 'amount_wein'})\n",
-    "\n",
-    "df_weinstein['name'] = df_weinstein.name.replace({\n",
-    "    \"AMALGAMATED TRANSIT UNION COPE\": \"ATU COPE VOLUNTARY ACCOUNT\",\n",
-    "    \"IBEW LOCAL UNION NO. 5 PAC\": \"LOCAL 0005 IBEW PAC\",\n",
-    "    \"MIDATLANTIC POLITICAL LEAGUE - MALPA\": \"MID-ATLANTIC LABORERS' POLITICAL LEAGUE\",\n",
-    "    \"STEAMFITTERS LOCAL UNON #449\": \"LOCAL 0449 STEAMFITTERS UNION PAC\",\n",
-    "    \"STEAMFITTERS LOCAL UNION 449 PAC FUND\": \"LOCAL 0449 STEAMFITTERS UNION PAC\",\n",
-    "    \"PLUMBERS LOCAL UNION NO. 27 PAC\": \"LOCAL 0027 PLUMBERS UNION PAC\",\n",
-    "    \"BRICKLAYERS &AMP; ALLIED CRAFTWORKERS LOCAL 9 PAC\": \"LOCAL 0009 BRICKLAYERS & ALLIED CRAFTWORKERS PA PAC\",\n",
-    "    \"PITTSBURGH FIRE FIGHTERS LOCAL NO 1 FIRE PAC ACCOUNT\": \"PGH FIRE FIGHTERS LOCAL #1 FIRE PAC\",\n",
-    "    \"TEAMSTERS LOCAL UNION 249 - DRIVE FUND\": \"LOCAL 0249 TEAMSTERS DRIVE\",\n",
-    "    \"U.W.U.A. LOCAL 433 PAC\": \"LOCAL 0433 UWUA (UTILITY WORKERS)\",\n",
-    "    \"TEAMSTER JOINT COUNCIL 40 PAC\": \"TEAMSTERS JT COUNCIL 40 PAC\",\n",
-    "    \"AFSCME COUNCIL 13 POLITICAL &AMP; LEGISLATIVE\": \"AFSCME COUNCIL 13 POL & LEG ACCT\",\n",
-    "    # Laborers\n",
-    "    \"LABORERS DISTRICT COUNCIL OF WESTERN PENNSYLVANIA\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
-    "    \"LABORERS' DISTRICT COUNCIL OF WESTERN PENNSYLVANIA\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
-    "    \"WESTERN PA LABORERS UNION PAC\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
-    "    \"WESTERN PENNSYLVANIA LABORERS\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
-    "    \"WESTERN PENNSYLVANIA LABORERS' PAC\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "951ccabf-318a-4bd6-a59a-0451ebd6431b",
    "metadata": {},
    "outputs": [
@@ -171,17 +139,13 @@
        "41                        CHARLES HAMMEL III       7500.0  0.015039"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_weinstein_topcontribs = df_weinstein.groupby('name').amount_wein.sum().to_frame().reset_index()\n",
-    "\n",
-    "weinstein_sum = df_weinstein.amount_wein.sum()\n",
-    "df_weinstein_topcontribs['pct_wein'] = df_weinstein_topcontribs.amount_wein / weinstein_sum\n",
-    "\n",
+    "df_weinstein_topcontribs = get_top_contributors('Weinstein')\n",
     "df_weinstein_topcontribs.sort_values(by='amount_wein', ascending=False).head(10)"
    ]
   },
