Move innamo to new top contribs

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -159,30 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7da9f58c-0b3a-4e19-aa40-0cf32867f147",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_innamorato = get_contributions('Innamorato')\n",
-    "df_innamorato = df_innamorato.rename(columns={'amount': 'amount_inna'})\n",
-    "\n",
-    "df_innamorato['name'] = df_innamorato.name.replace({\n",
-    "    \"1776 PAC\": \"1776 PAC (UFCW)\",\n",
-    "    \"AFSCME COUNCIL 13\": \"AFSCME COUNCIL 13 POL & LEG ACCT\",\n",
-    "    \"EVAN SEGAL\": \"EVAN J. SEGAL\",\n",
-    "    \"PENNSYLVANIA SEIU COPE\": \"SEIU HEALTHCARE PA COPE\",\n",
-    "    \"PFT POLITICAL ACTION FUND\": \"PFT POL ACTION FUND (PGH FED TEACHERS)\",\n",
-    "    \"TEAMSTERS LOCAL UNION 249\": \"LOCAL 0249 TEAMSTERS DRIVE\",\n",
-    "    \"TEAMSERS LOCAL UNION 249\": \"LOCAL 0249 TEAMSTERS DRIVE\",\n",
-    "    \"TEAMSTERS LOCAL UNION 249 DRIVE FUND\": \"LOCAL 0249 TEAMSTERS DRIVE\",\n",
-    "    \"WESTERN PENNSYLVANIA LABORERS POLITICAL ACTION FUND\": \"WESTERN PENNSYLVANIA LABORERS 2019 PAC\",\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8e2bd0ab-961c-4db8-a466-5cab86fb5050",
    "metadata": {},
    "outputs": [
@@ -291,17 +268,13 @@
        "550                           REPRESENT PAC      5500.00  0.017076"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_innamorato_topcontribs = df_innamorato.groupby('name').amount_inna.sum().to_frame().reset_index()\n",
-    "\n",
-    "innamorato_sum = df_innamorato.amount_inna.sum()\n",
-    "df_innamorato_topcontribs['pct_inna'] = df_innamorato_topcontribs.amount_inna / innamorato_sum\n",
-    "\n",
+    "df_innamorato_topcontribs = get_top_contributors('Innamorato')\n",
     "df_innamorato_topcontribs.sort_values(by='amount_inna', ascending=False).head(10)"
    ]
   },
@@ -315,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "93e6b7ed-fe94-4cef-b19c-995ce3ab9979",
    "metadata": {},
    "outputs": [],
@@ -354,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "10d2b694-967e-4f0a-aba8-452877d4c235",
    "metadata": {},
    "outputs": [],
@@ -379,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4a8d2591-aaaf-4efa-8617-cceffc5ff1c1",
    "metadata": {},
    "outputs": [
@@ -499,7 +472,7 @@
        "52   9300158          INTL BROTHERHOOD BOILERMAKERS 154       7100.0  0.018041"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d5a9fcaa-f90d-4899-98e4-82768c553906",
    "metadata": {},
    "outputs": [],
@@ -555,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "696cfb68-ad07-4603-a3a4-448b99fd315c",
    "metadata": {},
    "outputs": [
@@ -654,7 +627,7 @@
        "AFSCME COUNCIL 13 POL & LEG ACCT        0.000508  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "34e834ac-f1c0-4943-b619-ab4ffbf1c83a",
    "metadata": {},
    "outputs": [
@@ -805,7 +778,7 @@
        "SEIU HEALTHCARE PA COPE                 0.000127  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ed628fc7-7565-4c8c-9db1-0ba12580ebe3",
    "metadata": {},
    "outputs": [
@@ -1007,7 +980,7 @@
        "TEAMSTERS LOCAL 205 PAC                             0.000508  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "d4b67b3c-f5c0-43df-a741-bb770a32db90",
    "metadata": {},
    "outputs": [],
@@ -1046,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "c225734f-a72b-4e47-994d-f8473293e275",
    "metadata": {},
    "outputs": [],
